# wbyte-selenium-lambda

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  main.yml
_CI/: bootstrap.sh
infra/: package-lock.json
src/: main.py  objectwrapper.py
