[tool.poetry]
name = "wbyte-selenium-lambda"
version = "0.1.0"
description = ""
authors = ["Tom Marshall <tom.q.marshall@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
boto3 = "^1.34.143"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
